unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/ETT_Scrap_Tyre_Analysis__c.object-meta.xml
<CustomObject>
    <description>Scrap Tyre Analysis for the collection Team</description>
    <label>Scrap Tyre Analysis</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrap Tyre Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scrap Tyres Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>