unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Scrap Tyres Analysis</relationshipLabel>
    <relationshipName>Scrap_Tyres_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>