unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Scrap Tyres Analysis</relationshipLabel>
    <relationshipName>Scrap_Tyres_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>