unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Scrap Tyres Analysis</relationshipLabel>
    <relationshipName>Scrap_Tyres_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>