unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_New_Country__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT New Country</label>
    <length>250</length>
    <type>Text</type>
</CustomField>