unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Scrap Tyres Analysis</relationshipLabel>
    <relationshipName>Scrap_Tyres_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>