unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>