unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>