unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Scrap Tyres Analysis</relationshipLabel>
    <relationshipName>Scrap_Tyres_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>