unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/recordTypes/ETT_Tyre_Cash_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Customer</fullName>
    <active>true</active>
    <label>Tyre - Cash Customer</label>
</RecordType>