unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/recordTypes/ETT_Tyre_Cash_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Cash Supplier</label>
</RecordType>