unpackaged/main/default/objects/ETT_Scrap_Tyre_Analysis__c/recordTypes/Tyre_Credit_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Credit_B2B_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Credit/B2B Supplier</label>
</RecordType>